# TimeOnTaskPredictor

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  SPEC.md  pyproject.toml
artifacts/: aim_analysis.md  baseline_lgbm.txt  baseline_report.md  cnn_baseline_report.md  cnn_test_preds.parquet  dataset_card.md  eval_metrics.json  eval_predictions.parquet  eval_report.md  external_card.md  external_report.md  image_resolution.md  lupi_teacher_card.md  lupi_teacher_preds.parquet  raw_audit.md  rows_card.md  scaffold_stats.parquet  vlm_task_test_preds.parquet  vlm_task_train_card.md  vlm_test_preds.parquet  vlm_train_card-dryrun.md  vlm_train_card.md
artifacts/figures/: figures_card.md
artifacts/sweeps/: vlm_lam000_card.md  vlm_lam025_card.md  vlm_lam050_card.md  vlm_lam075_card.md  vlm_lam100_card.md
artifacts_lam50/: eval_report.md  splits.json
configs/: baseline.yaml  cnn.yaml  data.yaml  eval.yaml  external.yaml  figures.yaml  lupi.yaml  lupi_outcome.yaml  vlm.yaml  vlm_feat.yaml  vlm_feat_task.yaml  vlm_lupi.yaml  vlm_task.yaml  vlm_task_lupi.yaml
configs/sweeps/: _base.yaml  lam00.yaml  lam000.yaml  lam025.yaml  lam050.yaml  lam075.yaml  lam10.yaml  lam100.yaml  lam25.yaml  lam30.yaml  lam35.yaml  lam40.yaml  lam45.yaml  lam50.yaml  lam55.yaml  lam60.yaml  lam60_full.yaml  lam65.yaml  lam65_full.yaml  lam70.yaml  lam70_full.yaml  lam75.yaml  lam75_full.yaml  lam80.yaml  lam85.yaml  lam90.yaml
configs/sweeps/outcome/: lam025.yaml  lam050.yaml  lam075.yaml  lam100.yaml
docs/: APPROACH.md  ARCHITECTURE.md  PROPOSAL.tex
scripts/: analyze_aim.py  build_dataset.py  build_parquets.py  clear_stale_finals.py  decode_val.py  download_minimal.sh  evaluate.py  evaluate.sbatch  external.sbatch  make_figures.py  make_lupi_teacher.py  predict.py  prepare_external.py  run_all.sbatch  run_everything.sh  run_sweep.py  select_lambda.py  setup.sbatch  submit_all.sh  submit_fine_sweep.sh  sweep.sbatch  train.sbatch  train_baseline.py  train_cnn_baseline.py  train_condition.sbatch  train_vlm.sbatch  validate_external.py
src/totvlm/: config.py  data.py  features.py  fetch.py  images.py  labels.py  lupi.py  model.py  scoring.py  splits.py  train.py
tests/: test_config.py  test_external_guard.py  test_features.py  test_figures.py  test_images.py  test_labels.py  test_lupi.py  test_parse.py  test_resolve_sampling.py  test_run_sweep.py  test_scaffold.py  test_scoring.py  test_splits.py  test_task_totals.py  test_vlm_data.py
tests/fixtures/: 8uJRwmgg3iwq9-rnZ_MpJ.json  yjeXPEBxd5EACsDz4xPWx.json
