[project]
name = "Time-On-Task-Predictor"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
description = "An HCI project, part of Computational Modeling Course"
authors = [
    { name="Idrees Razak", email="asadidrees.razak@student.hpi.de" }
]
dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "transformers==5.0.0rc1",
    "accelerate>=1.13.0",
    "datasets>=5.0.0",
    "pillow>=12.2.0",
    "sentencepiece>=0.2.1",
    "safetensors>=0.8.0",
    "peft>=0.19.1",
    "huggingface_hub>=0.14.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
 
[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
