[project]
name = "Time-On-Task-Predictor"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
description = "An HCI project, part of Computational Modeling Course"
authors = [
    { name="Idrees Razak", email="asadidrees.razak@student.hpi.de" }
]
dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "transformers==5.0.0rc1",
    "accelerate>=1.13.0",
    "datasets>=3.4.1",   # floor only (unused in code): unsloth-zoo caps <4.4
    "pillow>=12.2.0",
    "sentencepiece>=0.2.1",
    "safetensors>=0.8.0",
    "peft>=0.16.0",   # floor only: unsloth (vlm extra) needs a newer peft
    "huggingface_hub>=0.14.1",
    "wandb>=0.27.2",
    "pandas-stubs~=3.0.3",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "tldextract>=5.3.1",
    "httpx>=0.28.1",
    "tenacity>=9.1.4",
    "scipy>=1.14.1",
    "lightgbm>=4.5.0",
    "matplotlib>=3.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# CUDA-only training stack for totvlm.train (Unsloth QLoRA SFT).
# Install with: uv sync --extra vlm
vlm = [
    # unsloth pins its own compatible trl (<=0.24) and transformers range;
    # >=2025.10 is when Qwen3-VL vision support landed.
    "unsloth>=2025.10 ; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.16",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
 
[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
